# cargo_detection

./: .gitignore  .gitmodules  data.dvc  evaluation_images.dvc  lightning_logs.dvc  main.py  pyproject.toml
.dvc/: config
statistics/: performance_metrics.py
training/retinanet/: evaluation.py  evaluation_01.py  training_01.py  training_02.py  training_03.py  training_04.py  training_05.py  training_06.py
training/utils/: dataset_merging.py  dataset_merging_variant.py  id_extraction.py
