[project]
name = "cargo-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "data-io",
    "dvc>=3.67.0",
    "dvc-ssh>=4.2.2",
    "machine-learning",
    "pytorch-lightning>=2.6.1",
]

[tool.uv.workspace]
members = [
    "machine_learning",
    "data_io/python",
]

[tool.uv.sources]
machine-learning = { workspace = true, editable = true }
data-io = { workspace = true, editable = true }
