[project]
name = "cargo-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bidict>=0.23.1",
    "data-io",
    "dvc>=3.67.0",
    "dvc-ssh>=4.2.2",
    "machine-learning",
    "numpy>=2.1.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[tool.uv.workspace]
members = [
    "machine_learning",
    "data_io/python",
]

[tool.uv.sources]
machine-learning = { workspace = true, editable = true }
data-io = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "datumaro>=1.12.0",
    "ipython>=9.12.0",
]
